--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,7 @@
 @layer components {
     .input {
         @apply rounded-full border border-stone-200 px-4 py-2 text-sm transition duration-300
-        placeholder:text-stone-400 focus:outline-none focus:ring focus:ring-yellow-400 w-full
-        md:px-6 md:py-3;
+        placeholder:text-stone-400 focus:outline-none focus:ring focus:ring-yellow-400 md:px-6 md:py-3;
     }
 
     .loader {
@@ -34,17 +33,3 @@
     }
 
 }
-
-/*body {*/
-/*  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,*/
-/*    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;*/
-/*  background-color: #f7f7f7;*/
-/*  color: #444;*/
-/*}*/
-
-/*.layout {*/
-/*  display: grid;*/
-/*  grid-template-rows: auto 1fr auto;*/
-/*  gap: 32px;*/
-/*  height: 100dvh;*/
-/*}*/
